# cpp_base_course

./: CMakeLists.txt
lesson1/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
