cmake_minimum_required(VERSION 4.2)
project(cpp_base_course)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_base_course main.cpp)
add_executable(l01_task01 lesson1/task1.cpp)
add_executable(l01_task02 lesson1/task2.cpp)
add_executable(l01_task03 lesson1/task3.cpp)
add_executable(l01_task04 lesson1/task4.cpp)